test/should-fail/vsgc1213.f3
/*
 * @test/compile-error
 */

class BoundFuncTest{
   var arr:String [] =["This ", "is ", "weird"];
   function func(){
        delete arr;
   }
   bound function func2(){
        func();
   }
}
